@@ -5,6 +5,7 @@ Improvements
 ------------
 - doh2: send HTTP error status codes (#618, !1102)
 - policy.STUB: try to avoid TCP (compared to 5.3.0; !1155)
+- cache: improve handling write errors from LMDB (!1159)
 
 Bugfixes
 --------
